--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       </ul>
 
       <ul id="nav-mobile" class="sidenav">
+        <li>MENU</li>
         <li><a href="index.html">Accueil</a></li>
         <li><a href="prestation.html">Prestations</a></li>
         <li><a href="permanent.html">Maquillage permanent</a></li>
@@ -45,7 +46,7 @@
         <br><br>
       </div>
     </div>
-    <div class="parallax"><img src="assets/style/images/background1.png" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="assets/style/images/background1.webp" alt="Unsplashed background img 1"></div>
   </div>
 
   <div class="container content-change">
