--- a/permanent.html
+++ b/permanent.html
@@ -28,6 +28,7 @@
         <li><a href="permanent.html">Maquillage-Permanent</a></li>
         <li><a href="tarif.html">Tarifs</a></li>
         <li><a href="contact.html">Contact</a></li>
+        <li><img src="assets/style/images/logo_institut2.png" alt="logo"></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
@@ -44,78 +45,78 @@
         <br><br>
       </div>
     </div>
-    <div class="parallax"><img src="assets/style/images/background1.png" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="assets/style/images/background1.webp" alt="Unsplashed background img 1"></div>
   </div>
 
+  <section>
+    <h2 class="center">Le Maquillage permanent</h2>
+    <p class="center txt-legend">La beauté naturelle durable. Redessiner, souligner, intensifier ou corriger vos sourcils, vos yeux ou votre bouche.</p>
+    <ul class="collapsible popout">
+      <li>
+        <div class="collapsible-header">Détail</div>
+        <div class="collapsible-body center">
+          <p>Toute création comprend une retouche à une mois incluse.</p>
+          <p class="bold size-20">Retouches</p>
+          <p>A l'issue d'une création. 2ème retouche-Ajustement forme-couleur. 60€ (séance dans les 3 mois qui suivent la création)</p>
+          <p class="bold size-20">Entretien</p>
+          <p>Après une création. (Remise sur le prix de la création) </p>
+          <ul>
+              <li>De 3 à 6 mois. -70%</li>
+              <li>De 6 à 12 mois. -50%</li>
+              <li>De 12 à 18 mois. -30%</li>
+          </ul> 
+        </div>
+      </li>
+    </ul>
 
-  
-<section>
-          <h2>Le Maquillage permanent</h2>
-          <p class="txt-legend">La beauté naturelle durable. Redessiner, souligner, intensifier ou corriger vos sourcils, vos yeux ou votre bouche.</p>
-            
-            <article class="box perma-1">
-              <h3>Tarifs</h3>
-              <div class="perma-in perma-in-1">
-                  <p>Sourcils</p>
-                  <ul class="list-institut">
-                      <li>Hairstroke - Effet poil à poil. 290€</li>
-                      <li>Perfect brow - Intensification des sourcils. 250€</li>
-                      <li>Hybride - Mixte poudré / poil à poil. 320€</li>
-                  </ul>
-                  <p>Yeux</p>
-                  <img src="assets/style/images/microneesling.jpg" alt="photo"/>
-                  <p>Lashliner - Intensification ras de cils</p>
-                  <ul class="list-institut">
-                      <li>Haut. 180€</li>
-                      <li>Bas. 100€</li>
-                      <li>Haut et bas. 250€</li>
-                  </ul>
-                  <p>Lèvre</p>
-                  <ul class="list-institut">
-                    <li>Magic lips by Maud - Naturel, nude ou rosé avec contour léger + illuminateur. 350€</li>
-                  </ul>
-                  <p>Natural Freckles</p> 
-                  <ul class="list-institut">
-                    <li>Tâches de rousseurs de différentes tailles et couleurs. 200€</li>
-                  </ul> 
-              </div>
-            </article>
+    <ul class="collapsible popout">
+      <li>
+        <div class="collapsible-header">Tarifs</div>
+        <div class="collapsible-body center">
+          <p class="bold size-20">Sourcils</p>
+            <ul>
+                <li class="price">Hairstroke - Effet poil à poil: <span>290€</span></li>
+                <li class="price">Perfect brow - Intensification des sourcils: <span>250€</span></li>
+                <li class="price">Hybride - Mixte poudré / poil à poil: <span>320€</span></li>
+            </ul>
+            <p class="bold size-20">Yeux</p>
+            <p class="txt-legend italic">Lashliner - Intensification ras de cils</p>
+            <ul>
+                <li class="price">Haut: <span>180€</span></li>
+                <li class="price">Bas: <span>100€</span></li>
+                <li class="price">Haut et bas: <span>250€</span></li>
+            </ul>
+            <p class="bold size-20">Lèvre</p>
+            <ul>
+              <li class="price">Magic lips by Maud - Naturel, nude ou rosé avec contour léger + illuminateur: <span>350€</span></li>
+            </ul>
+            <p class="bold size-20">Natural Freckles</p> 
+            <ul>
+              <li class="price">Tâches de rousseurs de différentes tailles et couleurs: <span>200€</span></li>
+            </ul> 
+        </div>
+      </li>
+    </ul>
 
-            <article class="box perma-2">
-              <h3>infos</h3>
-              <div class="perma-in perma-in-2">
-                  <p>Toute création comprend une retouche à une mois incluse.</p>
-                  <p>Retouches</p>
-                  <p>A l'issue d'une création. 2ème retouche-Ajustement forme-couleur. 60€ (séance dans les 3 mois qui suivent la création)</p>
-                  <p>Entretien</p>
-                  <p>Après une création. (Remise sur le prix de la création) </p>
-                  <ul class="list-institut">
-                      <li>De 3 à 6 mois. -70%</li>
-                      <li>De 6 à 12 mois. -50%</li>
-                      <li>De 12 à 18 mois. -30%</li>
-                  </ul> 
-              </div>
-            </article>
+    <ul class="collapsible popout">
+      <li>
+        <div class="collapsible-header">Microneedling and co</div>
+        <div class="collapsible-body center">
+            <ul>
+              <p class="bold size-20">Microneedling</p>
+              <li class="price">>Le microneedling est une technique de revitalisation de la peau qui agit sur les problématique du veillissement cutané, ameliore le grain et l'éclat de la peau, réduit les taches, les traces d'acné, les cicatrices et les pores dilatés. En créant des micro-perforations en superficie des la peau avec un stylet électrique, le microneedling déclenche un processus de réparation naturelle de la peau en stimulant la production d'élastique et de collagène ainsi qu'une forte pénetration des actifs utilisé lors de la séance. associé à une séance de luminothérapie. <span>90€</span></li>
+              <p class="bold size-20">BBglow</p>
+              <li class="price">>Application d'un sérum teinté sur l'ensemble du visage. Masque les imperfections, rougeurs, taches et unifie le teint. maquillage bbcrème semi permanent. <span>95€</span></li>
+              <p class="bold size-20">BBlips</p>
+              <li class="price">>Application d'un serum teinté pour des lèvres légèrement coloré. maquillage de la bouche semi permanent. <span>80€</span></li>
+              <p class="bold size-20">Brow lift</p>
+              <li class="price">>Restructuration et épaississement des sourcils de façon naturelle et temporaire. <span>60€</span></li>
+            </ul>
+        </div>
+      </li>
+    </ul>
 
-            <article class="box perma-3">
-              <h3>Microneedling and co</h3>
-              <div class="perma-in perma-in-3">
-                  <ul class="list-institut">
-                    <p>Microneedling</p>
-                      <li>Le microneedling est une technique de revitalisation de la peau qui agit sur les problématique du veillissement cutané, ameliore le grain et l'éclat de la peau, réduit les taches, les traces d'acné, les cicatrices et les pores dilatés. En créant des micro-perforations en superficie des la peau avec un stylet électrique, le microneedling déclenche un processus de réparation naturelle de la peau en stimulant la production d'élastique et de collagène ainsi qu'une forte pénetration des actifs utilisé lors de la séance. associé à une séance de luminothérapie. 90€</li>
-                      <p>BBglow</p>
-                      <li>Application d'un sérum teinté sur l'ensemble du visage. Masque les imperfections, rougeurs, taches et unifie le teint. maquillage bbcrème semi permanent. 95€</li>
-                      <p>BBlips</p>
-                      <li>Application d'un serum teinté pour des lèvres légèrement coloré. maquillage de la bouche semi permanent. 80€</li>
-                      <p>Brow lift</p>
-                      <li>Restructuration et épaississement des sourcils de façon naturelle et temporaire. 60€</li>
-                  </ul>
-                </div>
-            </article>
-
-      </section>
-  
-
+  </section>
   
 
   <footer class="page-footer background-institut">
