--- a/tarif.html
+++ b/tarif.html
@@ -28,6 +28,7 @@
         <li><a href="permanent.html">Maquillage permanent</a></li>
         <li><a href="tarif.html">Tarifs</a></li>
         <li><a href="contact.html">Contact</a></li>
+        <li><img src="assets/style/images/logo_institut2.png" alt="logo"></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
@@ -44,7 +45,7 @@
         <br><br>
       </div>
     </div>
-    <div class="parallax"><img src="assets/style/images/background1.png" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="assets/style/images/background1.webp" alt="Unsplashed background img 1"></div>
   </div>
 
 
