--- a/prestation.html
+++ b/prestation.html
@@ -3,6 +3,8 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta name="keywords" content="Institut de beauté, Gréoux-les-Bains,Alpes de hautes Provence, soins bien-être, massage, maquillage, PHYSIODERMIE">
+  <meta name="description" content="L'institut Soin de soi, vos soins bien-être et beauté aux portes des Gorges du verdon dans le cœur de Gréoux-les-Bains. Avec une méthode PHYSIODERMIE, notre centre de beauté vous offres une experience unique.">
   <title>Contact</title>
 
   <!-- CSS  -->
