--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
   <title>Contact</title>
 
   <!-- CSS  -->
-  <link async href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="assets/style/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="assets/style/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
@@ -128,7 +128,7 @@
   </footer>
 
   <!--  Scripts-->
-  <script async src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="assets/js/materialize.js"></script>
   <script src="assets/js/init.js"></script>
   </body>
