--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="assets/js/materialize.js"></script>
+  <script src="assets/js/materialize.min.js"></script>
   <script src="assets/js/init.js"></script>
   <script src="assets/js/script.js"></script>
 
