css / js minifier

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="assets/style/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="assets/style/css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="assets/style/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
@@ -57,7 +57,7 @@
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
+            <h2 class="center brown-text"><i class="medium material-icons">flash_on</i></h2>
             <h5 class="center">Coordonnées:</h5>
 
             <p class="light center">tel: 06 83 83 78 14</p>
@@ -66,7 +66,7 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">person_pin_circle</i></h2>
+            <h2 class="center brown-text"><i class="medium material-icons">person_pin_circle</i></h2>
             <h5 class="center">Adresse:</h5>
 
             <p class="light">16 Rue des Templiers 04800 Gréoux-les-Bains France</p>
@@ -75,7 +75,7 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">star</i></h2>
+            <h2 class="center brown-text"><i class="medium material-icons">star</i></h2>
             <h5 class="center">Horaires d'ouvertures:</h5>
 
             <p class="light"><ul class="center">
