--- a/permanent.html
+++ b/permanent.html
@@ -8,8 +8,8 @@
   <title>Maquillage permanent</title>
 
   <!-- CSS  -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="assets/style/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" disabled>
+  <link href="assets/style/css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="assets/style/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
