--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="assets/style/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="assets/style/css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="assets/style/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
