--- a/tarif.html
+++ b/tarif.html
@@ -36,7 +36,7 @@
     </div>
   </nav>
 
-  <div id="index-banner" class="parallax-container">
+  <div id="index-banner" class="parallax-container" style="box-shadow: 0 5px 20px 0px rgba(0,0,0,0.25)">
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
