--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
       <!--   Icon Section   -->
       
-  <div class="row">
+  <div class="row" style="box-shadow: 2px 1px 10px 0px #9e9e9e">
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="medium material-icons">flash_on</i></h2>
@@ -147,14 +147,14 @@
           <h5 class="white-text center">e-mail</h5>
           <ul class="center">
             <li><a class="white-text" href="mailto:harosabrina0705@gmail.com">
-              <img src="assets/style/images/email-logo-png-1114-32x32.ico" alt="mail"/></a></li>
+              <img class="footer-icon" src="assets/style/images/email-logo-png-1114-32x32.ico" alt="mail"/></a></li>
           </ul>
         </div>
         <div class="col l3 s12">
           <h5 class="white-text center">Nos réseaux</h5>
           <ul class="center">
-            <li><a class="white-text" href="https://fr-fr.facebook.com/lateliersoindesoi/"><img src="assets/style/images/facebook-logo-484-32x32.ico" alt="facebook"/></a></li>
-            <li><a class="white-text" href="https://www.instagram.com/sabrinaharohernandez/"><img src="assets/style/images/logo-instagram-png-2430-32x32.ico" alt="instagram"/></a></li>
+            <li><a class="white-text" target="_blank" href="https://fr-fr.facebook.com/lateliersoindesoi/"><img class="footer-icon" src="assets/style/images/facebook-logo-484-32x32.ico" alt="facebook"/></a></li>
+            <li><a class="white-text" target="_blank" href="https://www.instagram.com/sabrinaharohernandez/"><img class="footer-icon" src="assets/style/images/logo-instagram-png-2430-32x32.ico" alt="instagram"/></a></li>
           </ul>
         </div>
       </div>
