--- a/tarif.html
+++ b/tarif.html
@@ -8,7 +8,7 @@
   <title>Tarifs</title>
 
   <!-- CSS  -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" disabled>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="assets/style/css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="assets/style/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
@@ -187,14 +187,14 @@
           <h5 class="white-text center">e-mail</h5>
           <ul class="center">
             <li><a class="white-text" href="mailto:harosabrina0705@gmail.com">
-              <img src="assets/style/images/email-logo-png-1114-32x32.ico" alt="mail"/></a></li>
+              <img class="footer-icon" src="assets/style/images/email-logo-png-1114-32x32.ico" alt="mail"/></a></li>
           </ul>
         </div>
         <div class="col l3 s12">
           <h5 class="white-text center">Nos réseaux</h5>
           <ul class="center">
-            <li><a class="white-text" href="https://fr-fr.facebook.com/lateliersoindesoi/"><img src="assets/style/images/facebook-logo-484-32x32.ico" alt="facebook"/></a></li>
-            <li><a class="white-text" href="https://www.instagram.com/sabrinaharohernandez/"><img src="assets/style/images/logo-instagram-png-2430-32x32.ico" alt="instagram"/></a></li>
+            <li><a class="white-text" target="_blank" href="https://fr-fr.facebook.com/lateliersoindesoi/"><img class="footer-icon" src="assets/style/images/facebook-logo-484-32x32.ico" alt="facebook"/></a></li>
+            <li><a class="white-text" target="_blank" href="https://www.instagram.com/sabrinaharohernandez/"><img class="footer-icon" src="assets/style/images/logo-instagram-png-2430-32x32.ico" alt="instagram"/></a></li>
           </ul>
         </div>
       </div>
