--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <br><br>
       </div>
     </div>
-    <div class="parallax"><img src="assets/style/images/background1.webp" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="assets/style/images/background1.jpg" alt="Unsplashed background img 1"></div>
   </div>
 
   <div class="container content-change">
@@ -137,7 +137,7 @@
   
 
   <footer class="page-footer background-institut">
-    <div class="container">
+    <div class="container" style="text-shadow: 0px 0px 10px #796868bd;">
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">L'institut Soin De Soi</h5>
